manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: umbdemofrontend 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: umbdemofrontend
  template:
    metadata:
      labels:
        app: umbdemofrontend 
    spec:
      containers:
        - name: umbdemofrontend 
          image: ciqkubeacr.azurecr.io/umb/demo/rontend
          ports:
          - containerPort: 80
