manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: umbdemofrontend
spec:
    type: LoadBalancer
    ports:
    - port: 80 
      targetPort: 5000
    selector:
        app: umbdemofrontend
